# secure-local-db-agent

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: tests.yml
docs/: architecture.md  results.md
evals/: questions.yaml  run_eval.py
src/: agent.py  runner.py  safety.py  schema.py
tests/: test_agent.py  test_eval.py  test_runner.py  test_safety.py  test_schema.py
ui/: app.py
